--- a/demos/package.json
+++ b/demos/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "@showlotus/vue2-sub-app",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "refresh": "rm -rf **/node_modules && pnpm i --offline"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue2": "~2.3.1",
-    "vite": "^5.2.0",
-    "vue": "^2.7.16",
-    "vue-i18n": "^8.28.2",
-    "vue-template-compiler": "~2.7.16",
-    "vue2-sub-app": "workspace:^"
-  }
+	"name": "vue2-sub-app-demos",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue2": "~2.3.1",
+		"vite": "^5.2.0",
+		"vue": "^2.7.16",
+		"vue-i18n": "^8.28.2",
+		"vue-template-compiler": "~2.7.16",
+		"vue2-sub-app": "workspace:*"
+	}
 }
