--- a/packages/vue2-sub-app/package.json
+++ b/packages/vue2-sub-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-sub-app",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "Make any component can be used as the Root-like component.",
   "files": [
     "dist",
