--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@showlotus/vue2-sub-app",
   "version": "1.0.0",
+  "packageManager": "pnpm@8.11.0",
   "devDependencies": {
     "rimraf": "^5.0.7"
   },
