--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": " pnpm --filter ./demos run dev",
+    "build": "pnpm --filter ./packages/vue2-sub-app build",
     "clear": " rimraf node_modules demos/node_modules packages/vue2-sub-app/node_modules",
     "refresh": "pnpm run clear && pnpm i --offline"
   },
