--- a/packages/vue2-sub-app/tsconfig.json
+++ b/packages/vue2-sub-app/tsconfig.json
@@ -10,8 +10,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "noResolve": true,
-    "typeRoots": ["./types"]
+    "skipLibCheck": true
   }
 }
